<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/card"
    android:layout_margin="8dp"
    android:layout_height="wrap_content"
    app:cardCornerRadius="16dp"
    app:cardElevation="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <FrameLayout
            android:id="@+id/background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/background_transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="visible">
        </FrameLayout>

        <ImageView
            android:id="@+id/photo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/image_building"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginVertical="12dp"
            android:layout_marginStart="12dp"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:lines="1"
            android:paddingBottom="4dp"
            android:text="@string/building_name"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/photo"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginVertical="12dp"
            />

        <ImageView
            android:id="@+id/cookie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/mini_cookie"
            app:layout_constraintStart_toEndOf="@+id/photo"
            app:layout_constraintTop_toBottomOf="@id/name" />

        <TextView
            android:id="@+id/cost"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:lines="1"
            android:layout_marginTop="2dp"
            android:layout_marginStart="2dp"
            android:text="@string/building_cost"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@id/quantity"
            app:layout_constraintStart_toEndOf="@id/cookie"
            app:layout_constraintTop_toBottomOf="@id/name"/>

        <TextView
            android:id="@+id/quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:lines="1"
            android:paddingBottom="4dp"
            android:text="@string/building_quantity"
            android:paddingEnd="20dp"
            android:layout_marginEnd="12dp"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>